Test sidebar on Tablet to fix and block scrolling.

--- a/products-trade/less/products-page/products-page.less
+++ b/products-trade/less/products-page/products-page.less
@@ -1,6 +1,9 @@
 	html,body{
 		&.overflow-hidden{
 		 	overflow: hidden;
+		 	&.mobile{
+		 		height: 100vh;
+		 	}
 		}		
 	}
 #product-pages{
